[package]
name = "steamgriddb_api"
authors = ["Philip Kristoffersen <philipkristoffersen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust client for steamgriddb.com API"
version = "0.1.0"
edition = "2018"
readme = "crates-io.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
