[package]
name = "steamgriddb_api"
authors = ["Philip Kristoffersen <philipkristoffersen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust client for steamgriddb.com API"
repository = "https://github.com/PhilipK/steamgriddb_api"
documentation = "https://docs.rs/steamgriddb_api/0.1.1/steamgriddb_api/"
keywords = ["api", "steam", "images"]
categories = ["api-bindings"]
version = "0.3.0"
edition = "2018"
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
urlencoding = "2.1.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
reqwest = { version = "0.11.*", features = ["json"] }
